--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
+#============================
+# Configuration server
+#============================
+spring.application.name=configserver
+server.port=8888
 spring.profiles.active=native
-server.port=9000
 security.user.name=etheses
 security.user.password=s3cr3t
+#============================
+# Service discovery
+#============================
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
